<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/image1" />-->



    <EditText
        android:id="@+id/numberField"
        android:layout_width="655dp"
        android:layout_height="55dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="59dp"
        android:layout_marginBottom="66dp"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="@+id/button16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/resultField" />

    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF9800"
        android:text="@string/button16"
        app:layout_constraintBaseline_toBaselineOf="@+id/button17"
        app:layout_constraintStart_toEndOf="@+id/button12"
        android:onClick="detectOrientation"/>

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onNumberClick"
        android:text="@string/button10"
        app:layout_constraintBaseline_toBaselineOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button5" />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onNumberClick"
        android:text="@string/button13"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintStart_toEndOf="@+id/button8" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onNumberClick"
        android:text="@string/button12"
        app:layout_constraintBaseline_toBaselineOf="@+id/button13"
        app:layout_constraintStart_toStartOf="@+id/button8" />

    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFF9800"
        android:onClick="onOperationClick"
        android:text="@string/button15"
        app:layout_constraintBaseline_toBaselineOf="@+id/button14"
        app:layout_constraintStart_toEndOf="@+id/button10" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFF9800"
        android:onClick="onOperationClick"
        android:text="@string/button3"
        app:layout_constraintBaseline_toBaselineOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/button2" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFF9800"
        android:onClick="onOperationClick"
        android:text="@string/button11"
        app:layout_constraintBaseline_toBaselineOf="@+id/button10"
        app:layout_constraintStart_toEndOf="@+id/button6" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onNumberClick"
        android:text="@string/button4"
        app:layout_constraintBaseline_toBaselineOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:onClick="onNumberClick"
        android:text="@string/button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="256dp"
        android:onClick="onNumberClick"
        android:text="@string/button1"
        app:layout_constraintBaseline_toBaselineOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onNumberClick"
        android:text="@string/button8"
        app:layout_constraintBaseline_toBaselineOf="@+id/button9"
        app:layout_constraintStart_toStartOf="@+id/button4" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onNumberClick"
        android:text="@string/button9"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toEndOf="@+id/button4" />

    <TextView
        android:id="@+id/resultField"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="23dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/operationField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/operationField"
        android:layout_width="315dp"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="1dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/numberField"
        app:layout_constraintEnd_toEndOf="@+id/numberField"
        app:layout_constraintTop_toTopOf="@+id/resultField" />

    <Button
        android:id="@+id/button18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFF9800"
        android:onClick="onOperationClick"
        android:text="@string/button18"
        app:layout_constraintBaseline_toBaselineOf="@+id/button17"
        app:layout_constraintStart_toEndOf="@+id/button14" />

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onNumberClick"
        android:text="@string/button14"
        app:layout_constraintBaseline_toBaselineOf="@+id/button13"
        app:layout_constraintStart_toEndOf="@+id/button9" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onNumberClick"
        android:text="@string/button5"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintStart_toStartOf="@+id/button1" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onNumberClick"
        android:text="@string/button6"
        app:layout_constraintBaseline_toBaselineOf="@+id/button5"
        app:layout_constraintStart_toEndOf="@+id/button1" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFF9800"
        android:onClick="onOperationClick"
        android:text="@string/button7"
        app:layout_constraintBaseline_toBaselineOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button2" />

    <Button
        android:id="@+id/button17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFF9800"
        android:text="@string/button17"
        app:layout_constraintBottom_toTopOf="@+id/button13"
        app:layout_constraintStart_toEndOf="@+id/button13" />

</androidx.constraintlayout.widget.ConstraintLayout>